Mon Nov 25 03:10:46 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: change terminology OLDSPACE -> OLDMALLOC.
	  (oldspace -> oldmalloc for variable names)

	  OLDSPACE is confusing because it is not includes slots.
	  To more clearly, rename such as (oldspace_limit -> oldmalloc_limit).
	  It is clear that it measures (estimates) malloc()'ed size.

Mon Nov 25 00:50:03 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* internal.h: use __builtin_bswap16() if possible.

	* configure.in: check existence of __builtin_bswap16().

Sun Nov 24 22:24:19 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigxor_int): Apply BIGLO for long in a BDIGIT expression.
	  (bigor_int): Ditto.
	  (bigand_int): Ditto.

Sun Nov 24 18:13:23 2013  Tanaka Akira  <akr@fsij.org>

	* include/ruby/defines.h (SIZEOF_ACTUAL_BDIGIT): Defined.

	* include/ruby/ruby.h (RBIGNUM_EMBED_LEN_MAX): Use
	  SIZEOF_ACTUAL_BDIGIT instead of SIZEOF_BDIGITS.
	  SIZEOF_BDIGITS can be different to sizeof(BDIGIT).

Sun Nov 24 13:49:08 2013  Tanaka Akira  <akr@fsij.org>

	* include/ruby/defines.h: Don't use int128_t for Bignum.
	  It's not always faster.

	* bignum.c: Ditto.

Sun Nov 24 10:18:15 2013  Aman Gupta <ruby@tmm1.net>

	* NEWS: Add details about new debugging features and APIs.

Sun Nov 24 09:37:20 2013  Andrew Vit  <andrew@avit.ca>

	* lib/csv.rb: Optimize header hashes by freezing string keys.
	  [ruby-core:58510]

Sun Nov 24 09:18:06 2013  Aman Gupta <ruby@tmm1.net>

	* ext/objspace/objspace_dump.c (dump_object): Use PRIuSIZE to print
	  size_t for better win32 compatibility.
	* test/objspace/test_objspace.rb (test_dump_all): Hold reference to
	  test string to avoid failure due to GC. Reduce size of failure message
	  using grep(/TEST STRING/).

Sun Nov 24 08:38:00 2013  Kyle Stevens  <kstevens715@gmail.com>

	* lib/csv.rb: If skip_lines is set to a String, convert it to a Regexp
	  to prevent the alternative, which is that each line in the CSV gets